--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-*.ipynb
-
 # Distribution / packaging
 .Python
 build/
@@ -104,4 +102,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-.vscode/settings.json
+.vscode
